# thapo-calc

./: .gitignore  CMakeLists.txt  README.md  build.sh  meson-win32.config  meson-win64.config  meson.build  meson_options.txt  windows-bundle.sh
build-helpers/: build-win32.sh  build-win64.sh  build.sh
cpp/: CMakeLists.txt
cpp/src/thapo-calc-cli/: thapo-calc-cli.cpp
cpp/src/thapo-calc-gui/: qml.qrc  thapo-calc-gui.qml
data/: thapo-calc-gtkmm.desktop
golang/thapo-calc-cli/: go.mod  main.go
golang/thapo-calc-cli/command/: calcCommand.go  commands.go  defaultCommand.go
golang/thapo-calc-cli/commands/: calcCommand.go  commands.go  defaultCommand.go
golang/thapo-calc-cli/service/: calcService.go  service.go
golang/thapo-calc-gui/: AppComp.go  go.mod  main.go
golang/thapo-calc-gui/components/: HeaderComp.go
golang/thapo-calc-gui/pages/: CalculatorPage.go
golang/thapo-calc-gui/service/: gui_service.go
golang/thapo-calc-lib/: go.mod
golang/thapo-calc-lib/libservice/: calcService.go  service.go
golang/thapo-calc-lib/service/: calcService.go
rust-ws/: .gitignore  Cargo.toml
rust-ws/rust-common/: Cargo.toml
rust-ws/rust-common/src/: lib.rs
rust-ws/thapo-calc/: Cargo.toml
rust-ws/thapo-calc/src/: lib.rs  main.rs
rust-ws/thapo-calc/src/cli/: cli.rs  mod.rs  root_cmd.rs
rust-ws/thapo-calc/src/cli/calc_cmd/: calc_cmd.rs  mod.rs
rust-ws/thapo-calc/src/cli/tui_cmd/: mod.rs  tui_cmd.rs
rust-ws/thapo-calc/src/domain/calculation/: calculation.rs  mod.rs
rust-ws/thapo-calc/src/gui/: app.rs
src/libthapo-calc/: error.h  grammar.cpp  grammar.h  libthapo-calc.cpp  libthapo-calc.h
src/thapo-calc-cli/: CMakeLists.txt  thapo-calc-cli.cpp
src/thapo-calc-gtkmm/: buttons.cpp  buttons.h  thapo-calc-gtkmm.cpp
src/thapo-calc-gui/: CMakeLists.txt  Controller.cpp  Controller.h  thapo-calc-gui.cpp  thapo-calc-gui.qml
src/thapo-calc-lib/: CMakeLists.txt  grammar.cpp  thapo-calc-lib.cpp
