[package]
name = "thapo-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
num = "0.4.0"
rand = "0.8.5"
regex = "1.6.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
time = "0.3.12"
tokio = { version = "1.20.1", features = ["full"] }
